Исправил замечания AleksandrFedotov